# swaMoola

swa_moola_backend/: Cargo.toml  api.http
swa_moola_backend/.sqlx/: query-03f7b71255b707af046a2c9621df1a7eb1bfa7c65393f0c7d2339adf611419d9.json  query-3965ff588a0b8e08eee74dd85e2338692b2339aff0e8bb0ad7d043c34ec95f11.json  query-5ffe5d1126d680c03d725284cc47a265e3d4f3beef4ed1764daeafae5f2d90bc.json  query-7037594d2cc23b0a134d9148a1be785249e21e2e12ae365ffcd865977c4d5eac.json  query-84811ec9e3993d705f4d997bc5c13f78a5e91b86c5669b43c027c9bd7b22c645.json  query-a18cc05aaadbf5ce2d394c0da6791c39066357508ec00e8db26ea3fd00906b1d.json  query-a39ce67c9830bef3b5a776f8e80ad41e02ccab25886b81f386cbc17041c55a0a.json  query-c71706b51e0b1317363de4c150cb9cf63b2c1f7a1b77b12c62db5d83abcedfcf.json  query-c906b80adf1d4e8fcd8fe0d33d294d03798480c16b4837688100ce4b9f341e74.json  query-eee1fef9eb5934b1f06c0535471b628715e0a4af4f38043cdee3395f32bd8aff.json
swa_moola_backend/migrations/: 0001_users_table.sql  0002_conversations_table.sql  0003_add_names_to_conversations_table.sql  deletedata.txt
swa_moola_backend/src/: db.rs  main.rs  middleware.rs  notifications.rs
swa_moola_backend/src/chats/: handlers.rs  mod.rs  models.rs  services.rs
swa_moola_backend/src/users/: handlers.rs  mod.rs  models.rs  services.rs
swa_moola_rust_frontend/: Cargo.toml  index.html  tailwind.config.js  trunk.toml
swa_moola_rust_frontend/src/: auth_state.rs  interceptor.rs  main.rs
swa_moola_rust_frontend/src/auth/: login.rs  mod.rs  models.rs  register.rs
swa_moola_rust_frontend/src/chats/: chats_list.rs  (+3 more)
(+4 files in other folders)
