[package]
name = "swa_moola_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15" 
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "rust_decimal", "chrono","uuid" ] }
rust_decimal = { version = "1.41.0", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
uuid =  { version = "1.23.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken =  { version = "10.0", features = ["rust_crypto"]}
askama = "0.15.6" 
hex = "0.4.3"
sha2 = "0.11.0"
