[package]
name = "swa_moola_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = { version = "0.8.13"}
leptos-use = { version = "0.18.3", features = ["storage"] }
serde = { version = "1", features = ["derive"]}
uuid =  { version = "1.23.0", features = ["v4", "serde", "js"] }
reqwest =  { version = "0.13.3", features = ["json"] }
log = "0.4"
env_logger = "0.11" 
once_cell = "1.21.4"
chrono = { version ="0.4.44", features = ["serde"]}
